Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-77332

ShapePath fillColor and strokeColor become wrong when Item windows is lost

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.14.0 Alpha
    • 5.12.0, 5.13.0
    • Quick: Controls 2
    • None
    • Windows 7/10 and Linux (Intel driver).
    • Linux/X11, Windows
    • b407a77380f189438acf08fefff58e7c5b8fd036 (qt/qtdeclarative/dev)

    Description

      Shape/ShapePath fillColor and strokeColor seem to 'come back' to a previous color when Shape lose the link to 'window' (when one of its parent is null -> onWindowChanged).

       

      The problem should be arround 'Shape.GeometryRenderer' because there is no bug using the software renderer (QMLSCENE_DEVICE=softwarecontext).

       

      Steps to reproduce :

      1) start the main.qml (attached)

      2) click on first checkbox -> stroke color change to red

      3) click on 2nd checkbox -> the draw is not visible

      4) click again on 2nd checkbox -> the draw come back visible

      But ShapePath stroke come back to 'green' (and should be 'red' like the rectangle and the label text)

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            shausman Simon Hausmann
            g-bossard BOSSARD Guillaume
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes